--- a/index.html
+++ b/index.html
@@ -106,9 +106,10 @@
 ============================== -->
 	<div id="som">
 		<audio id="mp3" preload="metadata" autoplay controls loop>
-			<source src="../fabianoTeste/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/mp3"/>
-			<source src="../fabianoTeste/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/mpeg"/>
-			<source src="../fabianoTeste/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/ogg"/>
+			<source src="../Fabiano-Cantor.github.io-main/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/mp3"/>
+			<source src="../Fabiano-Cantor.github.io-main/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/mpeg"/>
+			<source src="../Fabiano-Cantor.github.io-main/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/ogg"/>
+			<source src="../Fabiano-Cantor.github.io-main/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/wav"/>
 				<p>Infelizmente seu navegador não tem suporte de repordução deste aúdio</p>
 				<a href="http://https://www.youtube.com/watch?v=7tzXcmu42Jw">Baixe este vídeo aqui</a>
 		</audio>
