--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 ============================== -->
 	<div id="som">
 		<audio id="mp3" preload="metadata" autoplay controls loop>
-			<source src="../Fabiano-Cantor.github.io-main/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/mp3"/>
-			<source src="../Fabiano-Cantor.github.io-main/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/mpeg"/>
-			<source src="../Fabiano-Cantor.github.io-main/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/ogg"/>
-			<source src="../Fabiano-Cantor.github.io-main/musica/FABYANO SILVA - A RESPOSTA DE DEUS Feat(Diego Nascimentto).mp3" type="audio/wav"/>
+			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/5908d981e49d72c7055c518f7bcf648f01d6e50f/musica/FABYANO%20SILVA%20-%20A%20RESPOSTA%20DE%20DEUS%20Feat(Diego%20Nascimentto).mp3" type="audio/mp3"/>
+			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/5908d981e49d72c7055c518f7bcf648f01d6e50f/musica/FABYANO%20SILVA%20-%20A%20RESPOSTA%20DE%20DEUS%20Feat(Diego%20Nascimentto).mp3" type="audio/mpeg"/>
+			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/5908d981e49d72c7055c518f7bcf648f01d6e50f/musica/FABYANO%20SILVA%20-%20A%20RESPOSTA%20DE%20DEUS%20Feat(Diego%20Nascimentto).mp3" type="audio/ogg"/>
+			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/5908d981e49d72c7055c518f7bcf648f01d6e50f/musica/FABYANO%20SILVA%20-%20A%20RESPOSTA%20DE%20DEUS%20Feat(Diego%20Nascimentto).mp3" type="audio/wav"/>
 				<p>Infelizmente seu navegador não tem suporte de repordução deste aúdio</p>
 				<a href="http://https://www.youtube.com/watch?v=7tzXcmu42Jw">Baixe este vídeo aqui</a>
 		</audio>
