--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
     Aúdio
 ============================== -->
 	<div id="som">
-		<audio id="mp3"  preload="audio" controls>
+		<audio id="mp3"  preload="auto" muted="muted" controls>
 			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/420e49b1cf146448f3f959d6ecdac6bea1a1be25/fabiano.mp3" type="audio/mp3"/>
 			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/420e49b1cf146448f3f959d6ecdac6bea1a1be25/fabiano.mp3" type="audio/mpeg"/>
 			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/420e49b1cf146448f3f959d6ecdac6bea1a1be25/fabiano.mp3" type="audio/ogg"/>
