--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
 ============================== -->
 	<div id="som">
 		<audio id="mp3" autoplay muted controls>
-			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/420e49b1cf146448f3f959d6ecdac6bea1a1be25/fabiano.mp3" type="audio/mp3"/>
-			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/420e49b1cf146448f3f959d6ecdac6bea1a1be25/fabiano.mp3" type="audio/mpeg"/>
-			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/420e49b1cf146448f3f959d6ecdac6bea1a1be25/fabiano.mp3" type="audio/ogg"/>
-			<source src="https://github.com/alexdias777/Fabiano-Cantor.github.io/blob/420e49b1cf146448f3f959d6ecdac6bea1a1be25/fabiano.mp3" type="audio/wav"/>
+			<source src="../fabianoTeste/fabiano.mp3" type="audio/mp3"/>
+			<source src="../fabianoTeste/fabiano.mp3" type="audio/mpeg"/>
+			<source src="../fabianoTeste/fabiano.mp3" type="audio/ogg"/>
+			<source src="../fabianoTeste/fabiano.mp3" type="audio/wav"/>
 				<p>Infelizmente seu navegador não tem suporte de repordução deste aúdio</p>
 				<a href="http://https://www.youtube.com/watch?v=7tzXcmu42Jw">Baixe este vídeo aqui</a>
 		</audio>
