--- a/index.html
+++ b/index.html
@@ -105,13 +105,16 @@
     Aúdio
 ============================== -->
 	<div id="som">
-		<audio id="mp3" autoplay muted controls>
+		<audio id="mp3"  controls>
 			<source src="../fabianoTeste/fabiano.mp3" type="audio/mp3"/>
 			<source src="../fabianoTeste/fabiano.mp3" type="audio/mpeg"/>
 			<source src="../fabianoTeste/fabiano.mp3" type="audio/ogg"/>
 			<source src="../fabianoTeste/fabiano.mp3" type="audio/wav"/>
-				<p>Infelizmente seu navegador não tem suporte de repordução deste aúdio</p>
-				<a href="http://https://www.youtube.com/watch?v=7tzXcmu42Jw">Baixe este vídeo aqui</a>
+				
+			<button onclick="play()" type="button">Play </button>
+			<button onclick="pause()" type="button">Pause</button>
+			<p>Infelizmente seu navegador não tem suporte de repordução deste aúdio</p>
+			<a href="http://https://www.youtube.com/watch?v=7tzXcmu42Jw">Baixe este vídeo aqui</a>
 		</audio>
 	</div>
 	<!-- =========================
