--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@
 	<script src="js/smoothscroll.js"></script>
 	<script src="js/wow.min.js"></script>
 	<script src="js/custom.js"></script>
+	<script src="js/audio.js"></script>
 
 </body>
 
