--- a/index.html
+++ b/index.html
@@ -105,11 +105,11 @@
     Aúdio
 ============================== -->
 	<div id="som">
-		<audio id="mp3"  controls>
-			<source src="../fabianoTeste/fabiano.mp3" type="audio/mp3"/>
-			<source src="../fabianoTeste/fabiano.mp3" type="audio/mpeg"/>
-			<source src="../fabianoTeste/fabiano.mp3" type="audio/ogg"/>
-			<source src="../fabianoTeste/fabiano.mp3" type="audio/wav"/>
+		<audio id="mp3" preload="metadata" controls>
+			<source src="fabianoTeste/fabiano.mp3" type="audio/mp3"/>
+			<source src="fabianoTeste/fabiano.mp3" type="audio/mpeg"/>
+			<source src="fabianoTeste/fabiano.mp3" type="audio/ogg"/>
+			<source src="fabianoTeste/fabiano.mp3" type="audio/wav"/>
 				
 			<button onclick="play()" type="button">Play </button>
 			<button onclick="pause()" type="button">Pause</button>
